src/test/deca/codegen/extension/valid/created/Objet/InstanceOfSimple.deca
// Description:
//  Teste le Instanceof avec une classe (cas simple)
// Resultats:
//  ok
//  ok
//  ok
//  ok

class A{

}

class B extends A{

}

{
    A newA = new A();
    B newB = new B();
    boolean res;

    if(newA instanceof A){
        println("ok");
    }

    
    if ((res = !!(newA instanceof A))){
        println("ok");
    }


    if (newB instanceof B){
        println("ok");
    }

    if (newB instanceof A){
        println("ok");
    }
    
}